Fix some concurrency errors Fix Summon cubic erros
Core changes:
compile and copy paste core.jar

Data changes:
Delete scripts folder and paste from this rev