@@ -21,12 +21,12 @@ package l2r.gameserver.model;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Set;
-import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Future;
 
+import javolution.util.FastList;
 import l2r.Config;
 import l2r.gameserver.GameTimeController;
 import l2r.gameserver.SevenSignsFestival;
@@ -92,7 +92,7 @@ public class L2Party extends AbstractPlayerGroup
 	public static final byte ITEM_ORDER = 3;
 	public static final byte ITEM_ORDER_SPOIL = 4;
 	
-	private final List<L2PcInstance> _members = new CopyOnWriteArrayList<>();
+	private final FastList<L2PcInstance> _members;
 	private boolean _pendingInvitation = false;
 	private long _pendingInviteTimeout;
 	private int _partyLvl = 0;
@@ -114,6 +114,7 @@ public class L2Party extends AbstractPlayerGroup
 	 */
 	public L2Party(L2PcInstance leader, PartyDistributionType partyDistributionType)
 	{
+		_members = new FastList<L2PcInstance>().shared();
 		_members.add(leader);
 		_partyLvl = leader.getLevel();
 		_distributionType = partyDistributionType;
@@ -122,6 +123,7 @@ public class L2Party extends AbstractPlayerGroup
 	// vGodFather: used only for event engine
 	public L2Party(L2PcInstance leader)
 	{
+		_members = new FastList<L2PcInstance>().shared();
 		_members.add(leader);
 		_partyLvl = leader.getLevel();
 		_distributionType = PartyDistributionType.RANDOM;
@@ -165,7 +167,7 @@ public class L2Party extends AbstractPlayerGroup
 	 */
 	private L2PcInstance getCheckedRandomMember(int itemId, L2Character target)
 	{
-		List<L2PcInstance> availableMembers = new ArrayList<>();
+		List<L2PcInstance> availableMembers = new FastList<>();
 		for (L2PcInstance member : getMembers())
 		{
 			if (member.getInventory().validateCapacityByItemId(itemId) && Util.checkIfInRange(Config.ALT_PARTY_RANGE2, target, member, true))
@@ -735,34 +737,38 @@ public class L2Party extends AbstractPlayerGroup
 	 */
 	public void distributeAdena(L2PcInstance player, long adena, L2Character target)
 	{
-		final List<L2PcInstance> toReward = new LinkedList<>();
+		// Check the party members that must be rewarded.
+		// The party member must be in range to receive its reward.
+		final List<L2PcInstance> ToReward = new FastList<>();
 		for (L2PcInstance member : getMembers())
 		{
-			if (Util.checkIfInRange(Config.ALT_PARTY_RANGE2, target, member, true))
+			if (!Util.checkIfInRange(Config.ALT_PARTY_RANGE2, target, member, true))
 			{
-				toReward.add(member);
+				continue;
 			}
+			ToReward.add(member);
+		}
+		
+		// Avoid null exceptions, if any
+		if (ToReward.isEmpty())
+		{
+			return;
 		}
 		
 		// Now we can actually distribute the adena reward
 		// (Total adena splitted by the number of party members that are in range and must be rewarded)
-		if (!toReward.isEmpty())
+		final long count = adena / ToReward.size();
+		for (L2PcInstance member : ToReward)
 		{
-			// Now we can actually distribute the adena reward
-			// (Total adena splitted by the number of party members that are in range and must be rewarded)
-			long count = adena / toReward.size();
-			for (L2PcInstance member : toReward)
+			if (member.isPremium())
 			{
-				if (member.isPremium())
-				{
-					long tempCount = count;
-					tempCount *= member.calcPremiumDropMultipliers(57);
-					member.addAdena("Party", tempCount, player, true);
-				}
-				else
-				{
-					member.addAdena("Party", count, player, true);
-				}
+				long tempCount = count;
+				tempCount *= member.calcPremiumDropMultipliers(57);
+				member.addAdena("Party", tempCount, player, true);
+			}
+			else
+			{
+				member.addAdena("Party", count, player, true);
 			}
 		}
 	}
@@ -778,7 +784,7 @@ public class L2Party extends AbstractPlayerGroup
 	{
 		// Check the party members that must be rewarded.
 		// The party member must be in range to receive it's reward.
-		final List<L2PcInstance> toReward = new LinkedList<>();
+		final List<L2PcInstance> toReward = new FastList<>();
 		for (L2PcInstance member : getMembers())
 		{
 			if (!Util.checkIfInRange(Config.ALT_PARTY_RANGE2, target, member, true))
@@ -1093,7 +1099,14 @@ public class L2Party extends AbstractPlayerGroup
 	@Override
 	public L2PcInstance getLeader()
 	{
-		return _members.get(0);
+		try
+		{
+			return _members.getFirst();
+		}
+		catch (NoSuchElementException e)
+		{
+			return null;
+		}
 	}
 	
 	public synchronized void requestLootChange(PartyDistributionType partyDistributionType)
